rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-screengui__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: DisplayOrder0
  class: ScreenGui
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    AutoLocalize:
      Type: Bool
      Value: true
    DisplayOrder:
      Type: Int32
      Value: 0
    Enabled:
      Type: Bool
      Value: true
    IgnoreGuiInset:
      Type: Bool
      Value: false
    ResetOnSpawn:
      Type: Bool
      Value: true
    Tags:
      Type: BinaryString
      Value: ""
  children: []
- referent: referent-1
  name: DisplayOrder1
  class: ScreenGui
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    AutoLocalize:
      Type: Bool
      Value: true
    DisplayOrder:
      Type: Int32
      Value: 1
    Enabled:
      Type: Bool
      Value: true
    IgnoreGuiInset:
      Type: Bool
      Value: false
    ResetOnSpawn:
      Type: Bool
      Value: true
    Tags:
      Type: BinaryString
      Value: ""
  children: []
- referent: referent-2
  name: DisplayOrder2
  class: ScreenGui
  properties:
    AttributesSerialize:
      Type: BinaryString
      Value: ""
    AutoLocalize:
      Type: Bool
      Value: true
    DisplayOrder:
      Type: Int32
      Value: 2
    Enabled:
      Type: Bool
      Value: true
    IgnoreGuiInset:
      Type: Bool
      Value: false
    ResetOnSpawn:
      Type: Bool
      Value: true
    Tags:
      Type: BinaryString
      Value: ""
  children: []
